fix layout issues

--- a/src/js/Components/WeatherWidget/Details/Details.scss
+++ b/src/js/Components/WeatherWidget/Details/Details.scss
@@ -1,6 +1,9 @@
 .widget__details {
   h2 {
     font-weight: 300;
+    font-size: 20px;
+    margin: 0;
+    margin-top: 10px;
   }
 
   .widget__details__sun {
