--- a/src/js/Components/WeatherWidget/Header/Header.scss
+++ b/src/js/Components/WeatherWidget/Header/Header.scss
@@ -1,15 +1,16 @@
 .widget__header {
   text-align: center;
+  margin-bottom: 20px;
 
   .widget__header--city {
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 300;
     margin: 0;
   }
 
   .widget__header--temp {
-    font-size: 6.25em;
-    line-height: 2.25em;
+    font-size: 5.5em;
+    line-height: 1.5em;
   }
 
   .widget__header--state {
