--- a/src/js/Components/WeatherWidget/Widget.scss
+++ b/src/js/Components/WeatherWidget/Widget.scss
@@ -3,12 +3,23 @@
 .widget__section {
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
-  padding: 40px;
-  margin: auto;
+  padding: 20px 30px;
   border-radius: 15px;
+  height: 580px;
+  max-height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 420px;
 
   @include mixins.mobile {
     width: 90%;
     padding: 10px;
   }
+}
+
+.widget__section>* {
+  flex: 1 1 auto;
+  min-height: 0;
 }
